@@ -1,146 +1,135 @@
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
-import java.io.ByteArrayInputStream;
-import java.io.InputStream;
 import java.util.*;
 
 import static org.junit.jupiter.api.Assertions.*;
 
-public class EvilHangmanTest {
-
-    private EvilHangman evilHangman;
-    private List<String> Dictionary;
-
-    @BeforeEach
-    void setUp() {
-        List<String> mockDictionary = Arrays.asList("apple", "angle", "amble");
-        Scanner mockScanner = new Scanner(System.in);
-        evilHangman = new EvilHangman(mockDictionary, mockScanner);
-    }
+class EvilHangmanTest {
 
     @Test
-    void testSetupWithValidDictionary() {
-        List<String> mockDictionary = Arrays.asList("apple", "angle", "amble");
-        EvilHangman evilHangman = new EvilHangman(mockDictionary, new Scanner(System.in));
-        assertEquals(new HashSet<>(mockDictionary), evilHangman.getWordList(), "Word list should be initialized with the dictionary.");
-        assertEquals(mockDictionary.get(0).length(), evilHangman.getSolution().getPartialSolution().length(), "Solution length should match the word length.");
-    }
-
-    @Test
-    void testSetupWithEmptyDictionary() {
-        List<String> emptyDictionary = Collections.emptyList();
-        Exception exception = assertThrows(IllegalArgumentException.class, () -> new EvilHangman(emptyDictionary, new Scanner(System.in)));
-        assertEquals("Dictionary is empty or null.", exception.getMessage(), "Exception should be thrown for an empty dictionary.");
-    }
-
-    @Test
-    void testSetupWithNullDictionary() {
-        Exception exception = assertThrows(IllegalArgumentException.class, () -> new EvilHangman(null, new Scanner(System.in)));
-        assertEquals("Dictionary is empty or null.", exception.getMessage(), "Exception should be thrown for a null dictionary.");
-    }
-
-    @Test
-    void testRandomWordSelection() {
-        List<String> mockDictionary = Arrays.asList("apple", "angle", "amble");
-        EvilHangman evilHangman = new EvilHangman(mockDictionary, new Scanner(System.in));
-
-        // Check that the solution's length corresponds to a word in the dictionary
-        String partialSolution = evilHangman.getSolution().getPartialSolution();
-        assertTrue(mockDictionary.stream().anyMatch(word -> word.length() == partialSolution.length()), "Selected word length should match the solution.");
+    void testGetPattern() {
+        EvilHangman game = new EvilHangman(Arrays.asList("apple", "ample"));
+        assertEquals("a____", game.getPattern("apple", 'a'), "Pattern should match guessed letter.");
+        assertEquals("_pp__", game.getPattern("apple", 'p'), "Pattern should reflect repeated letters.");
+        assertEquals("_____", game.getPattern("apple", 'z'), "Pattern should handle non-existent guessed letter.");
     }
 
     @Test
     void testPartition() {
-        // Setup initial state
-        char guess = 'a';
-        Map<String, Set<String>> result = evilHangman.partition(guess);
+        EvilHangman game = new EvilHangman(Arrays.asList("apple", "ample", "actor"));
+        Map<String, Set<String>> families = game.partition('p');
 
-        // Assert the correct families are created
-        assertTrue(result.containsKey("a____"));
-        assertTrue(result.containsKey("_____"));
-        assertEquals(Set.of("apple", "angle", "amble", "ample"), result.get("a____"));
-    }
-
-    @Test
-    void testPromptForGuessValidInput() {
-        // Simulate user input "a\n"
-        InputStream inputStream = new ByteArrayInputStream("a\n".getBytes());
-        Scanner mockScanner = new Scanner(inputStream);
-        List<String> mockDictionary = Arrays.asList("apple", "angle", "amble");
-        EvilHangman evilHangman = new EvilHangman(mockDictionary, mockScanner);
-
-        char guess = evilHangman.promptForGuess();
-        assertEquals('a', guess, "The method should return the guessed character.");
-    }
-
-    @Test
-    void testPromptForGuessInvalidInput() {
-        // Simulate user input: "1\nabc\n@\na\n"
-        InputStream inputStream = new ByteArrayInputStream("1\nabc\n@\na\n".getBytes());
-        Scanner mockScanner = new Scanner(inputStream);
-        List<String> mockDictionary = Arrays.asList("apple", "angle", "amble");
-        EvilHangman evilHangman = new EvilHangman(mockDictionary, mockScanner);
-
-        char guess = evilHangman.promptForGuess();
-        assertEquals('a', guess, "The method should ignore invalid inputs and return the first valid guess.");
-    }
-
-    @Test
-    void testPromptForGuessRepeatedInput() {
-        // Simulate user input: "a\nb\na\n"
-        InputStream inputStream = new ByteArrayInputStream("a\nb\na\n".getBytes());
-        Scanner mockScanner = new Scanner(inputStream);
-        List<String> mockDictionary = Arrays.asList("apple", "angle", "amble");
-        EvilHangman evilHangman = new EvilHangman(mockDictionary, mockScanner);
-        evilHangman.processGuess('a');
-        char guess = evilHangman.promptForGuess();
-        assertEquals('b', guess, "The method should ignore repeated guesses and return a new valid guess.");
+        assertEquals(3, families.size(), "Partition should have three family.");
+        assertTrue(families.containsKey("_pp__"), "Partition should include '_pp__'.");
+        assertTrue(families.containsKey("__p__"), "Partition should include '__p__'.");
+        assertTrue(families.containsKey("_____"), "Partition should include '_____'.");
     }
 
     @Test
     void testSelectLargestFamily() {
+        EvilHangman game = new EvilHangman(Arrays.asList("apple", "ample", "actor"));
         Map<String, Set<String>> families = new HashMap<>();
-        families.put("a____", Set.of("apple", "angle"));
-        families.put("_____l", Set.of("amble"));
-        families.put("a__e_", Set.of("ample"));
-        String largestFamily = evilHangman.selectLargestFamily(families);
-        assertEquals("a____", largestFamily);
+        families.put("a____", new HashSet<>(Arrays.asList("apple", "ample")));
+        families.put("_____", new HashSet<>(Arrays.asList("actor")));
+
+        String largestFamily = game.selectLargestFamily(families);
+        assertEquals("a____", largestFamily, "Largest family should be chosen based on size.");
     }
 
     @Test
-    void testGetPattern() {
-        // Check pattern generation
-        String pattern = evilHangman.getPattern("apple", 'p');
-        assertEquals("_pp__", pattern);
-
-        pattern = evilHangman.getPattern("actor", 'x');
-        assertEquals("_____", pattern);
+    void testProcessGuessCorrect() {
+        EvilHangman game = new EvilHangman(Arrays.asList("apple", "ample"));
+        game.processGuess('a');
+        assertEquals("a____", game.solution.getPartialSolution(), "Solution should reflect correct guess.");
     }
 
     @Test
-    void testProcessGuess() {
-        // Simulate a guess
-        char guess = 'a';
-        evilHangman.processGuess(guess);
-
-        assertTrue(evilHangman.getPreviousGuesses().contains(guess));
-        assertFalse(evilHangman.getIncorrectGuesses().contains(guess));
+    void testProcessGuessIncorrect() {
+        EvilHangman game = new EvilHangman(Arrays.asList("apple", "ample"));
+        game.processGuess('z');
+        assertTrue(game.getIncorrectGuesses().contains('z'), "Incorrect guesses should include the guessed letter.");
     }
 
     @Test
-    void testEvilSolutionUpdate() {
+    void testPromptForGuessValid() {
+        EvilHangman game = new EvilHangman(Arrays.asList("apple", "ample"));
+        Scanner mockScanner = new Scanner("a\n");
+        char guess = game.promptForGuess(mockScanner);
+        assertEquals('a', guess, "Prompt for guess should return the entered letter.");
+    }
+
+    @Test
+    void testPromptForGuessInvalid() {
+        EvilHangman game = new EvilHangman(Arrays.asList("apple", "ample"));
+        Scanner mockScanner = new Scanner("1\nz\n");
+        char guess = game.promptForGuess(mockScanner);
+        assertEquals('z', guess, "Prompt for guess should skip invalid input.");
+    }
+
+    @Test
+    void testWinConditionBeforeAll26Guesses() {
+        EvilHangman game = new EvilHangman(Arrays.asList("apple"));
+
+        game.processGuess('a'); // Partial pattern: "a____"
+        game.processGuess('p'); // Partial pattern: "app__"
+        game.processGuess('l'); // Partial pattern: "appl_"
+        game.processGuess('e'); // Complete word: "apple"
+
+        assertTrue(game.solution.isSolved(), "The solution should be solved when all letters in the word are guessed.");
+        assertEquals("apple", game.solution.getPartialSolution(), "The solution should match the word when solved.");
+
+        Set<Character> previousGuesses = game.getPreviousGuesses();
+        assertTrue(previousGuesses.size() < 26, "The game should end as soon as the word is solved.");
+    }
+
+
+    @Test
+    void testVictoryCondition() {
+        EvilHangman game = new EvilHangman(Arrays.asList("apple"));
+        game.processGuess('a');
+        game.processGuess('p');
+        game.processGuess('l');
+        game.processGuess('e');
+        assertTrue(game.solution.isSolved(), "Game should be solved when all letters are guessed.");
+        assertEquals("apple", game.solution.getPartialSolution(), "Solution should match the target word.");
+    }
+
+    @Test
+    void testUpdateSolutionSingleLetter() {
+        EvilSolution solution = new EvilSolution(5);
+        solution.updateSolution("a____", 'a');
+        assertEquals("a____", solution.getPartialSolution(), "Solution should reflect the guessed letter.");
+    }
+
+    @Test
+    void testUpdateSolutionMultipleLetters() {
         EvilSolution solution = new EvilSolution(5);
         solution.updateSolution("_pp__", 'p');
-        assertEquals("_pp__", solution.getPartialSolution(), "Solution should be '_pp__' after guessing 'p'.");
+        assertEquals("_pp__", solution.getPartialSolution(), "Solution should reflect multiple occurrences of the guessed letter.");
+    }
 
-        // Guess 'e' to reveal the last letter
-        solution.updateSolution("_pp_e", 'e');
-        assertEquals("_pp_e", solution.getPartialSolution(), "Solution should be '_pp_e' after guessing 'e'.");
+    @Test
+    void testUpdateSolutionNoChange() {
+        EvilSolution solution = new EvilSolution(5);
+        solution.updateSolution("_____", 'z');
+        assertEquals("_____", solution.getPartialSolution(), "Solution should not change if guessed letter is not in the word.");
+    }
 
-        // Guess 'a' to reveal the first letter
+    @Test
+    void testIsSolved() {
+        EvilSolution solution = new EvilSolution(5);
         solution.updateSolution("apple", 'a');
-        assertEquals("apple", solution.getPartialSolution(), "Solution should be 'apple' after guessing 'a'.");
-        assertTrue(solution.isSolved(), "Solution should be solved when all letters are revealed.");
+        solution.updateSolution("apple", 'p');
+        solution.updateSolution("apple", 'l');
+        solution.updateSolution("apple", 'e');
+        assertTrue(solution.isSolved(), "Solution should be solved when all letters are guessed.");
+    }
+
+    @Test
+    void testPrintProgress() {
+        EvilSolution solution = new EvilSolution(5);
+        solution.updateSolution("_pp__", 'p');
+        solution.printProgress();
+        assertEquals("_ p p _ _", solution.getPartialSolution().replaceAll("", " ").trim(), "Progress should match the partial solution.");
     }
 }
